# kb-clipboard

./: .gitignore  CHANGELOG.md  README.md  build.py  pyproject.toml
.github/workflows/: test-and-release.yml
desktop/: index.html  main.js  package-lock.json  package.json  preload.js  tailwind.config.js  vite.config.js
desktop/src/: App.jsx
src/kb_clipboard/: __init__.py  cli.py  watcher.py
tests/: test_watcher_logic.py
